--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "cakleimeier.github.io",
   "version": "1.0.0",
   "description": "Personal website for Catherine Kleimeier",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b master"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "generate": "nuxt generate",
+    "start": "nuxt start"
   },
   "repository": {
     "type": "git",
@@ -19,12 +20,12 @@
   "homepage": "https://github.com/cakleimeier/cakleimeier.github.io#readme",
   "dependencies": {
     "bulma": "^0.8.0",
-    "gatsby": "^2.18.17",
-    "gatsby-plugin-sass": "^2.1.26",
-    "gatsby-transformer-json": "^2.2.22",
-    "gh-pages": "^2.1.1",
-    "node-sass": "^4.13.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "nuxt": "^2.14.3"
+  },
+  "devDependencies": {
+    "eslint": "^7.7.0",
+    "eslint-loader": "^4.0.2",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.3"
   }
 }
