--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
   },
   "homepage": "https://github.com/cakleimeier/cakleimeier.github.io#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-regular-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/vue-fontawesome": "^0.1.10",
     "bulma": "^0.8.0",
-    "nuxt": "^2.14.3"
+    "nuxt": "^2.14.3",
+    "nuxt-fontawesome": "^0.4.0"
   },
   "devDependencies": {
     "eslint": "^7.7.0",
