--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^7.7.0",
     "eslint-loader": "^4.0.2",
     "node-sass": "^4.14.1",
+    "push-dir": "^0.4.1",
     "sass-loader": "^9.0.3"
   }
 }
