Remove dist from version control

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 
 # Automatically Generated Files
 # --------------------------------
-#dist
+dist
 
 # Build Directory
 # --------------------------------
