--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nuxt-fontawesome": "^0.4.0"
   },
   "devDependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "eslint": "^7.7.0",
     "eslint-loader": "^4.0.2",
     "node-sass": "^4.14.1",
