--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "eslint": "^7.7.0",
     "eslint-loader": "^4.0.2",
     "node-sass": "^4.14.1",
