--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "cakleimeier.github.io",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Personal website for Catherine Kleimeier",
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "generate": "nuxt generate",
     "start": "nuxt start",
-    "deploy": "push-dir --dir=dist --branch=master --cleanup"
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "repository": {
     "type": "git",
@@ -20,17 +20,11 @@
   },
   "homepage": "https://github.com/cakleimeier/cakleimeier.github.io#readme",
   "dependencies": {
-    "bulma": "^0.8.0",
-    "nuxt": "^2.14.3",
-    "nuxt-fontawesome": "^0.4.0"
+    "nuxt": "^2.15.3"
   },
   "devDependencies": {
-    "@fortawesome/free-brands-svg-icons": "^5.14.0",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "eslint": "^7.7.0",
-    "eslint-loader": "^4.0.2",
-    "node-sass": "^4.14.1",
-    "push-dir": "^0.4.1",
-    "sass-loader": "^9.0.3"
+    "@nuxtjs/tailwindcss": "^4.2.1",
+    "@tailwindcss/jit": "^0.1.18",
+    "push-dir": "^0.4.1"
   }
 }
