--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,35 @@
-{
+  {
   "root": true,
+  "extends": [
+    "plugin:nuxt/recommended",
+    "eslint:recommended",
+    // https://github.com/vuejs/eslint-plugin-vue#priority-a-essential-error-prevention
+    // consider switching to `plugin:vue/strongly-recommended` or `plugin:vue/recommended` for stricter rules.
+    "plugin:vue/recommended"
+  ],
+  plugins: [
+    "vue"
+  ],
   "parserOptions": {
-    "parser": "@babel/eslint-parser",
+    "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "extends": [
-    "@nuxtjs"
-  ]
+  "rules": {
+    "indent": [
+      "error",
+      "tab"
+    ],
+    "linebreak-style": [
+      "error",
+      "unix"
+    ],
+    "quotes": [
+      "error",
+      "single"
+    ],
+    "semi": [
+      "error",
+      "always"
+    ]
+  }
 }
