--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@tailwindcss/jit": "^0.1.18",
+    "autoprefixer": "^10.3.7",
+    "eslint-plugin-nuxt": "^2.0.0",
     "eslint-webpack-plugin": "2.5.4",
+    "node-sass": "^6.0.1",
+    "postcss-import": "^14.0.2",
     "push-dir": "^0.4.1",
     "sass": "^1.43.2",
-    "sass-loader": "10.2.0",
+    "sass-loader": "^10.2.0",
     "webpack": "4.46.0"
   }
 }
