--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build",
     "generate": "nuxt generate",
     "start": "nuxt start",
-    "deploy": "push-dir --dir=dist --branch=master --cleanup"
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
