--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "autoprefixer": "^10.3.7",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-webpack-plugin": "2.5.4",
+    "gh-pages": "^3.2.3",
     "node-sass": "^6.0.1",
     "postcss-import": "^14.0.2",
     "push-dir": "^0.4.1",
